--- a/index.html
+++ b/index.html
@@ -2,179 +2,225 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>THOVAL | Premium Streaming</title>
+<title>THOVAL Store</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- FUENTE MODERNA -->
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
 <style>
-
 body{
-    margin:0;
-    background:#050505;
-    font-family:'Poppins', sans-serif;
-    color:white;
-    text-align:center;
+margin:0;
+font-family:Poppins;
+background:#000;
+color:white;
+text-align:center;
+overflow-x:hidden;
 }
 
-/* HEADER */
-header{
-    padding:90px 20px;
-    background: radial-gradient(circle at top,#111,#000);
+/* FONDO ANIMADO PRO */
+body::before{
+content:"";
+position:fixed;
+width:100%;
+height:100%;
+background:
+radial-gradient(circle at 20% 30%, rgba(255,215,0,0.08), transparent 40%),
+radial-gradient(circle at 80% 70%, rgba(255,215,0,0.06), transparent 40%);
+animation:move 15s infinite alternate ease-in-out;
+z-index:-1;
+}
+@keyframes move{
+from{transform:translateY(0)}
+to{transform:translateY(-60px)}
 }
 
-/* TEXTO DORADO TEXTURA */
+/* LOGO */
 .logo{
-    font-family:'Orbitron', sans-serif;
-    font-size:4em;
-    background: linear-gradient(45deg,#d4af37,#ffd700,#b8962e,#ffd700,#d4af37);
-    background-size:300%;
-    -webkit-background-clip:text;
-    -webkit-text-fill-color:transparent;
-    animation: brillo 6s linear infinite;
-    letter-spacing:6px;
+font-family:Orbitron;
+font-size:3.5em;
+margin-top:40px;
+background:linear-gradient(45deg,#d4af37,#ffd700,#b8962e);
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
 }
 
-@keyframes brillo{
-    0%{background-position:0%}
-    100%{background-position:300%}
+/* GRID */
+.grid{
+display:flex;
+flex-wrap:wrap;
+justify-content:center;
+gap:25px;
+padding:30px;
 }
 
-.sub{
-    opacity:.8;
-    margin-top:10px;
+.card{
+background:#0a0a0a;
+padding:25px;
+border-radius:18px;
+width:240px;
+transition:.4s;
+border:1px solid rgba(255,215,0,.2);
 }
-
-/* BOTON */
-.btn{
-    display:inline-block;
-    margin-top:30px;
-    padding:16px 45px;
-    font-size:18px;
-    border-radius:14px;
-    text-decoration:none;
-    color:black;
-    font-weight:bold;
-    background:linear-gradient(45deg,#d4af37,#ffd700);
-    box-shadow:0 0 25px rgba(212,175,55,.4);
-    transition:.3s;
-}
-.btn:hover{
-    transform:scale(1.07);
-    box-shadow:0 0 40px rgba(255,215,0,.7);
-}
-
-/* SECCIONES */
-.section{
-    padding:70px 20px;
-}
-
-.titulo{
-    font-size:2.5em;
-    margin-bottom:40px;
-    color:#ffd700;
-}
-
-/* TARJETAS PLANES */
-.planes{
-    display:flex;
-    justify-content:center;
-    flex-wrap:wrap;
-    gap:30px;
-}
-
-.plan{
-    background:linear-gradient(145deg,#111,#0a0a0a);
-    border:1px solid rgba(255,215,0,.15);
-    padding:35px;
-    width:260px;
-    border-radius:20px;
-    transition:.4s;
-}
-
-.plan:hover{
-    transform:translateY(-15px) scale(1.03);
-    border:1px solid rgba(255,215,0,.6);
-    box-shadow:0 0 35px rgba(255,215,0,.2);
-}
-
-.plan h2{
-    color:#ffd700;
+.card:hover{
+transform:translateY(-12px) scale(1.03);
+box-shadow:0 0 35px rgba(255,215,0,.2);
 }
 
 .precio{
-    font-size:2.4em;
-    margin:15px 0;
-    font-weight:bold;
+color:#ffd700;
+font-size:1.8em;
+margin:15px 0;
 }
 
-/* BENEFICIOS */
-.lista{
-    max-width:700px;
-    margin:auto;
-    line-height:2em;
-    font-size:18px;
-    opacity:.9;
+button{
+padding:12px 30px;
+border:none;
+border-radius:10px;
+font-weight:bold;
+cursor:pointer;
+background:linear-gradient(45deg,#d4af37,#ffd700);
 }
 
-/* FOOTER */
-footer{
-    padding:40px;
-    background:black;
-    opacity:.6;
-    font-size:14px;
+/* CARRITO */
+#carrito{
+position:fixed;
+top:20px;
+right:20px;
+background:#111;
+padding:15px;
+border-radius:15px;
+font-size:14px;
 }
 
+/* LOGIN */
+#loginBox{
+margin:20px auto;
+background:#111;
+padding:20px;
+width:260px;
+border-radius:15px;
+}
+
+input{
+padding:10px;
+margin:5px;
+border-radius:8px;
+border:none;
+width:80%;
+}
+
+/* REDES */
+.redes a{
+margin:10px;
+display:inline-block;
+font-size:22px;
+text-decoration:none;
+color:#ffd700;
+transition:.3s;
+}
+.redes a:hover{
+transform:scale(1.3);
+}
 </style>
 </head>
 
 <body>
 
-<header>
 <div class="logo">THOVAL</div>
-<p class="sub">Streaming premium al mejor precio</p>
-<a class="btn" href="#">COMPRAR AHORA</a>
-</header>
 
-<section class="section">
-<div class="titulo">Planes Disponibles</div>
-
-<div class="planes">
-
-<div class="plan">
-<h2>Básico</h2>
-<div class="precio">$5</div>
-<p>Calidad HD</p>
-<p>1 dispositivo</p>
-<a class="btn" href="#">Elegir</a>
+<!-- LOGIN -->
+<div id="loginBox">
+<h3>Cuenta</h3>
+<input id="user" placeholder="Usuario"><br>
+<input id="pass" type="password" placeholder="Contraseña"><br>
+<button onclick="login()">Ingresar</button>
+<p id="estado"></p>
 </div>
 
-<div class="plan">
-<h2>Premium</h2>
-<div class="precio">$10</div>
-<p>Calidad 4K</p>
-<p>Hasta 4 dispositivos</p>
-<a class="btn" href="#">Elegir</a>
+<!-- CARRITO -->
+<div id="carrito">
+🛒 Carrito: <span id="contador">0</span>
+<br><button onclick="comprar()">Comprar</button>
+</div>
+
+<h2>Servicios</h2>
+
+<div class="grid">
+
+<div class="card">
+<h3>Netflix</h3>
+<div class="precio">$4.990</div>
+<button onclick="agregar('Netflix',4990)">Agregar</button>
+</div>
+
+<div class="card">
+<h3>Disney+</h3>
+<div class="precio">$5.990</div>
+<button onclick="agregar('Disney+',5990)">Agregar</button>
+</div>
+
+<div class="card">
+<h3>HBO Max</h3>
+<div class="precio">$6.990</div>
+<button onclick="agregar('HBO',6990)">Agregar</button>
+</div>
+
+<div class="card">
+<h3>Prime Video</h3>
+<div class="precio">$4.990</div>
+<button onclick="agregar('Prime',4990)">Agregar</button>
 </div>
 
 </div>
-</section>
 
-<section class="section">
-<div class="titulo">¿Por qué elegir THOVAL?</div>
-<div class="lista">
-✔ Activación inmediata<br>
-✔ Soporte rápido<br>
-✔ Garantía total<br>
-✔ Pagos con tarjeta débito y crédito<br>
-✔ Servicio confiable
+<h2>Redes Sociales</h2>
+<div class="redes">
+<a href="https://instagram.com" target="_blank">Instagram</a>
+<a href="https://wa.me/" target="_blank">WhatsApp</a>
+<a href="https://tiktok.com" target="_blank">TikTok</a>
+<a href="https://youtube.com" target="_blank">YouTube</a>
 </div>
-</section>
 
-<footer>
-© 2026 THOVAL — Todos los derechos reservados
-</footer>
+<script>
+
+/* LOGIN */
+function login(){
+let u=document.getElementById("user").value
+let p=document.getElementById("pass").value
+
+if(u && p){
+localStorage.setItem("usuario",u)
+estado.innerText="Bienvenido "+u
+}else{
+estado.innerText="Ingresa datos"
+}
+}
+
+/* CARRITO */
+let total=0
+let cantidad=0
+
+function agregar(nombre,precio){
+total+=precio
+cantidad++
+contador.innerText=cantidad
+}
+
+/* COMPRA */
+function comprar(){
+if(cantidad==0){
+alert("Carrito vacío")
+return
+}
+alert("Compra realizada por $"+total+" CLP")
+total=0
+cantidad=0
+contador.innerText=0
+}
+
+</script>
 
 </body>
 </html>
+
+
