--- a/index.html
+++ b/index.html
@@ -5,75 +5,81 @@
 <title>THOVAL Store</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Orbitron:wght@600&display=swap" rel="stylesheet">
 
 <style>
+
+/* FONDO */
 body{
 margin:0;
 font-family:Poppins;
-background:#000;
 color:white;
 text-align:center;
-overflow-x:hidden;
+background:url("fondo.jpg") center/cover fixed;
 }
-
-/* FONDO ANIMADO PRO */
 body::before{
 content:"";
 position:fixed;
 width:100%;
 height:100%;
-background:
-radial-gradient(circle at 20% 30%, rgba(255,215,0,0.08), transparent 40%),
-radial-gradient(circle at 80% 70%, rgba(255,215,0,0.06), transparent 40%);
-animation:move 15s infinite alternate ease-in-out;
+background:rgba(0,0,0,0.82);
 z-index:-1;
-}
-@keyframes move{
-from{transform:translateY(0)}
-to{transform:translateY(-60px)}
 }
 
 /* LOGO */
 .logo{
 font-family:Orbitron;
 font-size:3.5em;
-margin-top:40px;
+margin:30px 0;
 background:linear-gradient(45deg,#d4af37,#ffd700,#b8962e);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
-/* GRID */
+/* GRID SERVICIOS */
 .grid{
 display:flex;
 flex-wrap:wrap;
 justify-content:center;
 gap:25px;
-padding:30px;
+padding:20px;
 }
 
 .card{
-background:#0a0a0a;
-padding:25px;
+background:#0b0b0b;
+width:230px;
 border-radius:18px;
-width:240px;
+padding:25px;
 transition:.4s;
-border:1px solid rgba(255,215,0,.2);
+border:1px solid rgba(255,215,0,.15);
 }
 .card:hover{
-transform:translateY(-12px) scale(1.03);
-box-shadow:0 0 35px rgba(255,215,0,.2);
+transform:translateY(-12px);
+box-shadow:0 0 30px rgba(255,215,0,.2);
+}
+
+.card img{
+width:90px;
+height:90px;
+object-fit:contain;
+margin-bottom:10px;
 }
 
 .precio{
 color:#ffd700;
-font-size:1.8em;
-margin:15px 0;
+font-size:1.6em;
+margin:10px 0;
+font-weight:bold;
+}
+
+.info{
+font-size:14px;
+opacity:.8;
 }
 
 button{
-padding:12px 30px;
+margin-top:15px;
+padding:12px 28px;
 border:none;
 border-radius:10px;
 font-weight:bold;
@@ -82,45 +88,61 @@ background:linear-gradient(45deg,#d4af37,#ffd700);
 }
 
 /* CARRITO */
-#carrito{
+#carritoIcon{
 position:fixed;
 top:20px;
 right:20px;
 background:#111;
-padding:15px;
+padding:15px 20px;
 border-radius:15px;
-font-size:14px;
+cursor:pointer;
+font-weight:bold;
 }
 
-/* LOGIN */
-#loginBox{
-margin:20px auto;
-background:#111;
-padding:20px;
+#carritoBox{
+position:fixed;
+right:20px;
+top:80px;
 width:260px;
+background:#111;
 border-radius:15px;
+padding:20px;
+display:none;
 }
 
-input{
-padding:10px;
-margin:5px;
-border-radius:8px;
-border:none;
-width:80%;
+.item{
+font-size:14px;
+margin:5px 0;
 }
 
 /* REDES */
+.redes{
+margin:40px 0;
+}
+
 .redes a{
+display:inline-flex;
+align-items:center;
+justify-content:center;
+width:55px;
+height:55px;
+border-radius:50%;
 margin:10px;
-display:inline-block;
+color:white;
 font-size:22px;
 text-decoration:none;
-color:#ffd700;
 transition:.3s;
 }
 .redes a:hover{
-transform:scale(1.3);
+transform:scale(1.15);
 }
+
+/* COLORES REDES */
+.ig{background:#E1306C;}
+.wa{background:#25D366;}
+.tk{background:#000;}
+.yt{background:#FF0000;}
+
 </style>
 </head>
 
@@ -128,99 +150,81 @@ transform:scale(1.3);
 
 <div class="logo">THOVAL</div>
 
-<!-- LOGIN -->
-<div id="loginBox">
-<h3>Cuenta</h3>
-<input id="user" placeholder="Usuario"><br>
-<input id="pass" type="password" placeholder="Contraseña"><br>
-<button onclick="login()">Ingresar</button>
-<p id="estado"></p>
+<!-- CARRITO ICONO -->
+<div id="carritoIcon" onclick="toggleCart()">🛒 <span id="count">0</span></div>
+
+<!-- CARRITO BOX -->
+<div id="carritoBox">
+<h3>Carrito</h3>
+<div id="items"></div>
+<hr>
+Total: $<span id="total">0</span> CLP<br><br>
+<button onclick="comprar()">Finalizar compra</button>
 </div>
 
-<!-- CARRITO -->
-<div id="carrito">
-🛒 Carrito: <span id="contador">0</span>
-<br><button onclick="comprar()">Comprar</button>
-</div>
+<!-- SERVICIOS -->
+<div class="grid" id="grid"></div>
 
-<h2>Servicios</h2>
-
-<div class="grid">
-
-<div class="card">
-<h3>Netflix</h3>
-<div class="precio">$4.990</div>
-<button onclick="agregar('Netflix',4990)">Agregar</button>
-</div>
-
-<div class="card">
-<h3>Disney+</h3>
-<div class="precio">$5.990</div>
-<button onclick="agregar('Disney+',5990)">Agregar</button>
-</div>
-
-<div class="card">
-<h3>HBO Max</h3>
-<div class="precio">$6.990</div>
-<button onclick="agregar('HBO',6990)">Agregar</button>
-</div>
-
-<div class="card">
-<h3>Prime Video</h3>
-<div class="precio">$4.990</div>
-<button onclick="agregar('Prime',4990)">Agregar</button>
-</div>
-
-</div>
-
-<h2>Redes Sociales</h2>
+<!-- REDES -->
 <div class="redes">
-<a href="https://instagram.com" target="_blank">Instagram</a>
-<a href="https://wa.me/" target="_blank">WhatsApp</a>
-<a href="https://tiktok.com" target="_blank">TikTok</a>
-<a href="https://youtube.com" target="_blank">YouTube</a>
+<a class="ig" href="#" target="_blank">📷</a>
+<a class="wa" href="#" target="_blank">💬</a>
+<a class="tk" href="#" target="_blank">♪</a>
+<a class="yt" href="#" target="_blank">▶</a>
 </div>
 
 <script>
 
-/* LOGIN */
-function login(){
-let u=document.getElementById("user").value
-let p=document.getElementById("pass").value
+/* SERVICIOS */
+const servicios=[
+{name:"Netflix",precio:4990,img:"https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg",disp:"1 pantalla"},
+{name:"YouTube Premium",precio:5990,img:"https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg",disp:"1 dispositivo"},
+{name:"Spotify",precio:3990,img:"https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg",disp:"1 dispositivo"},
+{name:"Crunchyroll",precio:5490,img:"https://upload.wikimedia.org/wikipedia/commons/7/7a/Crunchyroll_Logo.svg",disp:"2 dispositivos"},
+{name:"HBO Max",precio:6990,img:"https://upload.wikimedia.org/wikipedia/commons/1/17/HBO_Max_Logo.svg",disp:"4 dispositivos"},
+{name:"Prime Video",precio:4990,img:"https://upload.wikimedia.org/wikipedia/commons/f/f1/Prime_Video.png",disp:"3 dispositivos"},
+{name:"Apple TV+",precio:5990,img:"https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg",disp:"4 dispositivos"},
+{name:"Paramount+",precio:4990,img:"https://upload.wikimedia.org/wikipedia/commons/6/6e/Paramount%2B_logo.svg",disp:"2 dispositivos"}
+]
 
-if(u && p){
-localStorage.setItem("usuario",u)
-estado.innerText="Bienvenido "+u
-}else{
-estado.innerText="Ingresa datos"
-}
-}
-
-/* CARRITO */
 let total=0
 let cantidad=0
 
-function agregar(nombre,precio){
+const grid=document.getElementById("grid")
+servicios.forEach(s=>{
+grid.innerHTML+=`
+<div class="card">
+<img src="${s.img}">
+<h3>${s.name}</h3>
+<div class="precio">$${s.precio}</div>
+<div class="info">Duración: 30 días</div>
+<div class="info">${s.disp}</div>
+<button onclick="add('${s.name}',${s.precio})">Agregar</button>
+</div>`
+})
+
+function add(nombre,precio){
 total+=precio
 cantidad++
-contador.innerText=cantidad
+count.innerText=cantidad
+items.innerHTML+=`<div class="item">${nombre} — $${precio}</div>`
 }
 
-/* COMPRA */
-function comprar(){
-if(cantidad==0){
-alert("Carrito vacío")
-return
+function toggleCart(){
+carritoBox.style.display=
+carritoBox.style.display==="block"?"none":"block"
 }
-alert("Compra realizada por $"+total+" CLP")
+
+function comprar(){
+if(cantidad==0){alert("Carrito vacío");return}
+alert("Compra realizada ✔ Total: $"+total+" CLP")
 total=0
 cantidad=0
-contador.innerText=0
+items.innerHTML=""
+count.innerText=0
 }
 
 </script>
 
 </body>
 </html>
-
-
