--- a/index.html
+++ b/index.html
@@ -9,17 +9,46 @@
 
 <style>
 
+/* BASE */
+body{
+margin:0;
+font-family:Poppins;
+color:white;
+text-align:center;
+background:#000;
+overflow-x:hidden;
+}
+
+/* FONDO ANIMADO SEGURO */
+body::before{
+content:"";
+position:fixed;
+width:100%;
+height:100%;
+background:
+radial-gradient(circle at 20% 30%, rgba(255,215,0,0.08), transparent 40%),
+radial-gradient(circle at 80% 70%, rgba(255,215,0,0.06), transparent 40%),
+radial-gradient(circle at 50% 50%, rgba(255,255,255,0.04), transparent 60%);
+animation:move 18s infinite alternate ease-in-out;
+z-index:-1;
+}
+
+@keyframes move{
+from{transform:translateY(0)}
+to{transform:translateY(-60px)}
+}
+
 /* LOGO */
 .logo{
 font-family:Orbitron;
-font-size:3.5em;
+font-size:3.2em;
 margin:30px 0;
 background:linear-gradient(45deg,#d4af37,#ffd700,#b8962e);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
-/* GRID SERVICIOS */
+/* GRID */
 .grid{
 display:flex;
 flex-wrap:wrap;
@@ -28,60 +57,72 @@ gap:25px;
 padding:20px;
 }
 
+/* TARJETAS */
 .card{
 background:#0b0b0b;
 width:230px;
 border-radius:18px;
 padding:25px;
-transition:.4s;
+transition:.35s;
 border:1px solid rgba(255,215,0,.15);
 }
+
 .card:hover{
-transform:translateY(-12px);
-box-shadow:0 0 30px rgba(255,215,0,.2);
+transform:translateY(-10px);
+box-shadow:0 0 30px rgba(255,215,0,.25);
 }
 
 .card img{
-width:90px;
-height:90px;
+width:85px;
+height:85px;
 object-fit:contain;
 margin-bottom:10px;
 }
 
+/* PRECIO */
 .precio{
 color:#ffd700;
-font-size:1.6em;
+font-size:1.5em;
 margin:10px 0;
 font-weight:bold;
 }
 
+/* TEXTO INFO */
 .info{
 font-size:14px;
-opacity:.8;
+opacity:.85;
 }
 
+/* BOTONES */
 button{
 margin-top:15px;
-padding:12px 28px;
+padding:12px 25px;
 border:none;
 border-radius:10px;
 font-weight:bold;
 cursor:pointer;
 background:linear-gradient(45deg,#d4af37,#ffd700);
+transition:.25s;
 }
 
-/* CARRITO */
+button:hover{
+transform:scale(1.05);
+}
+
+/* CARRITO ICONO */
 #carritoIcon{
 position:fixed;
 top:20px;
 right:20px;
 background:#111;
 padding:15px 20px;
-border-radius:15px;
+border-radius:14px;
 cursor:pointer;
 font-weight:bold;
+box-shadow:0 0 10px rgba(0,0,0,.6);
 }
 
+/* CAJA CARRITO */
 #carritoBox{
 position:fixed;
 right:20px;
@@ -91,16 +132,17 @@ background:#111;
 border-radius:15px;
 padding:20px;
 display:none;
+box-shadow:0 0 20px rgba(0,0,0,.7);
 }
 
 .item{
 font-size:14px;
-margin:5px 0;
+margin:6px 0;
 }
 
 /* REDES */
 .redes{
-margin:40px 0;
+margin:50px 0;
 }
 
 .redes a{
@@ -116,14 +158,15 @@ font-size:22px;
 text-decoration:none;
 transition:.3s;
 }
+
 .redes a:hover{
-transform:scale(1.15);
+transform:scale(1.18);
 }
 
 /* COLORES REDES */
 .ig{background:#E1306C;}
 .wa{background:#25D366;}
-.tk{background:#000;}
+.tk{background:#111;}
 .yt{background:#FF0000;}
 
 </style>
@@ -133,10 +176,9 @@ transform:scale(1.15);
 
 <div class="logo">THOVAL</div>
 
-<!-- CARRITO ICONO -->
+<!-- CARRITO -->
 <div id="carritoIcon" onclick="toggleCart()">🛒 <span id="count">0</span></div>
 
-<!-- CARRITO BOX -->
 <div id="carritoBox">
 <h3>Carrito</h3>
 <div id="items"></div>
@@ -150,15 +192,15 @@ Total: $<span id="total">0</span> CLP<br><br>
 
 <!-- REDES -->
 <div class="redes">
-<a class="ig" href="#" target="_blank">📷</a>
-<a class="wa" href="#" target="_blank">💬</a>
-<a class="tk" href="#" target="_blank">♪</a>
-<a class="yt" href="#" target="_blank">▶</a>
+<a class="ig" href="#">📷</a>
+<a class="wa" href="#">💬</a>
+<a class="tk" href="#">♪</a>
+<a class="yt" href="#">▶</a>
 </div>
 
 <script>
 
-/* SERVICIOS */
+/* LISTA SERVICIOS */
 const servicios=[
 {name:"Netflix",precio:4990,img:"https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg",disp:"1 pantalla"},
 {name:"YouTube Premium",precio:5990,img:"https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg",disp:"1 dispositivo"},
@@ -174,6 +216,7 @@ let total=0
 let cantidad=0
 
 const grid=document.getElementById("grid")
+
 servicios.forEach(s=>{
 grid.innerHTML+=`
 <div class="card">
