--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>THOVAL</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Orbitron:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
 <style>
 
@@ -13,99 +13,71 @@
 body{
 margin:0;
 font-family:Poppins;
-background:#050505;
 color:white;
 text-align:center;
-transition:.4s;
+background:url("https://images.unsplash.com/photo-1611162616475-46b635cb6868") center/cover fixed;
 }
 
-/* MODO CLARO */
-.light{
-background:#f5f5f5;
-color:#111;
-}
-
-/* FONDO PREMIUM */
 body::before{
 content:"";
 position:fixed;
 width:100%;
 height:100%;
-background:
-radial-gradient(circle at 20% 30%, rgba(255,215,0,0.08), transparent 40%),
-radial-gradient(circle at 80% 70%, rgba(255,215,0,0.05), transparent 40%);
-animation:bgmove 18s infinite alternate ease-in-out;
+background:rgba(0,0,0,.78);
 z-index:-1;
-}
-
-@keyframes bgmove{
-from{transform:translateY(0)}
-to{transform:translateY(-70px)}
-}
-
-/* INTRO */
-#intro{
-position:fixed;
-width:100%;
-height:100%;
-background:black;
-display:flex;
-align-items:center;
-justify-content:center;
-font-size:3em;
-font-family:Orbitron;
-z-index:999;
-animation:fadeout 2.5s forwards 1.5s;
-}
-
-@keyframes fadeout{
-to{opacity:0;visibility:hidden}
 }
 
 /* LOGO */
 .logo{
 font-family:Orbitron;
-font-size:3em;
+font-size:4em;
 margin:25px;
-background:linear-gradient(45deg,#d4af37,#ffd700,#b8962e);
+background:linear-gradient(45deg,#ffd700,#caa300,#ffd700);
 -webkit-background-clip:text;
--webkit-text-fill-color:transparent;
+color:transparent;
+text-shadow:
+0 0 8px rgba(255,215,0,.8),
+0 0 25px rgba(255,215,0,.6),
+0 0 45px rgba(255,215,0,.4);
+animation:shine 3s infinite linear;
 }
 
-/* NAV */
-nav{
-margin-bottom:20px;
+@keyframes shine{
+0%{filter:brightness(1)}
+50%{filter:brightness(1.5)}
+100%{filter:brightness(1)}
 }
 
+/* MENU */
 select{
-padding:10px;
+padding:12px;
 border-radius:10px;
-font-size:15px;
+font-size:16px;
+margin-bottom:20px;
 }
 
 /* GRID */
 .grid{
 display:flex;
 flex-wrap:wrap;
-justify-content:center;
 gap:25px;
+justify-content:center;
 padding:20px;
 }
 
-/* CARD GLASS */
 .card{
-backdrop-filter:blur(14px);
-background:rgba(255,255,255,0.05);
-border:1px solid rgba(255,255,255,0.1);
-border-radius:18px;
-padding:25px;
 width:230px;
+padding:25px;
+border-radius:20px;
+backdrop-filter:blur(14px);
+background:rgba(255,255,255,.06);
+border:1px solid rgba(255,255,255,.15);
 transition:.35s;
 }
 
 .card:hover{
-transform:translateY(-12px) scale(1.03);
-box-shadow:0 0 35px rgba(255,215,0,.25);
+transform:translateY(-10px) scale(1.04);
+box-shadow:0 0 30px rgba(255,215,0,.25);
 }
 
 .card img{
@@ -114,31 +86,23 @@ height:80px;
 object-fit:contain;
 }
 
-/* TEXTO */
 .precio{
 color:#ffd700;
-font-size:1.5em;
+font-size:1.4em;
 margin:10px;
 }
 
-.info{
-font-size:14px;
-opacity:.85;
-}
-
-/* BOTON */
 button{
-margin-top:12px;
-padding:11px 25px;
+padding:10px 22px;
 border:none;
 border-radius:10px;
 font-weight:bold;
 cursor:pointer;
-background:linear-gradient(45deg,#d4af37,#ffd700);
+background:linear-gradient(45deg,#ffd700,#caa300);
 }
 
 /* CARRITO */
-#cartIcon{
+#cart{
 position:fixed;
 top:15px;
 right:20px;
@@ -148,7 +112,7 @@ border-radius:14px;
 cursor:pointer;
 }
 
-#cartBox{
+#panelCart{
 position:fixed;
 top:70px;
 right:20px;
@@ -159,115 +123,117 @@ border-radius:16px;
 display:none;
 }
 
-/* REDES SVG */
-.redes{
-margin:40px;
-}
-
+/* REDES */
 .redes a{
 display:inline-flex;
-align-items:center;
-justify-content:center;
 width:55px;
 height:55px;
-margin:10px;
+margin:12px;
 border-radius:50%;
+align-items:center;
+justify-content:center;
 transition:.3s;
 }
 
-.redes a:hover{
-transform:scale(1.15);
-}
+.redes a:hover{transform:scale(1.2)}
 
 .ig{background:#E1306C}
 .wa{background:#25D366}
-.tk{background:#111}
+.tk{background:#000}
 .yt{background:#FF0000}
 
-svg{
-width:26px;
-fill:white;
+svg{width:26px;fill:white}
+
+/* REVIEWS */
+.reviewBox{
+max-width:500px;
+margin:auto;
 }
 
-/* TOGGLE */
-.toggle{
-position:fixed;
-left:20px;
-top:15px;
-cursor:pointer;
-background:#111;
-padding:12px 16px;
+.review{
+background:rgba(255,255,255,.07);
+padding:15px;
+margin:12px;
 border-radius:12px;
+}
+
+/* NEWS */
+.news div{
+background:rgba(255,255,255,.08);
+margin:12px auto;
+padding:18px;
+width:70%;
+border-radius:14px;
 }
 
 </style>
 </head>
-
 <body>
-
-<div id="intro">THOVAL</div>
-
-<div class="toggle" onclick="toggleMode()">☀️</div>
 
 <div class="logo">THOVAL</div>
 
-<nav>
 <select onchange="filtrar(this.value)">
 <option value="all">Todas</option>
 <option value="peliculas">Películas</option>
 <option value="musica">Música</option>
 <option value="deportes">Deportes</option>
 </select>
-</nav>
 
-<div id="cartIcon" onclick="toggleCart()">🛒 <span id="count">0</span></div>
+<div id="cart" onclick="toggleCart()">🛒 <span id="count">0</span></div>
 
-<div id="cartBox">
+<div id="panelCart">
 <h3>Carrito</h3>
 <div id="items"></div>
 <hr>
-Total: $<span id="total">0</span>
-<br><br>
-<button onclick="comprar()">Comprar</button>
+Total $<span id="total">0</span>
 </div>
 
 <div class="grid" id="grid"></div>
 
-<!-- REDES -->
+<h2>⭐ Opiniones</h2>
+
+<div class="reviewBox">
+<input id="nombre" placeholder="Nombre"><br><br>
+<select id="stars">
+<option>5</option><option>4</option><option>3</option><option>2</option><option>1</option>
+</select><br><br>
+<textarea id="coment" placeholder="Comentario"></textarea><br><br>
+<button onclick="guardarReview()">Enviar</button>
+
+<div id="reviews"></div>
+</div>
+
+<h2>📰 Noticias</h2>
+
+<div class="news">
+<div>🎮 Nuevo juego rompe récord mundial</div>
+<div>🎬 Estreno de película arrasa taquilla</div>
+<div>⚽ Final histórica sorprende al mundo</div>
+<div>🦸 Nueva serie de superhéroes confirmada</div>
+</div>
+
 <div class="redes">
 
-<a class="ig" href="#">
-<svg viewBox="0 0 24 24"><path d="M7 2C4 2 2 4 2 7v10c0 3 2 5 5 5h10c3 0 5-2 5-5V7c0-3-2-5-5-5H7zm5 5a5 5 0 110 10 5 5 0 010-10zm6-1a1 1 0 110 2 1 1 0 010-2z"/></svg>
-</a>
+<a class="ig"><svg viewBox="0 0 24 24"><path d="M7 2C4 2 2 4 2 7v10c0 3 2 5 5 5h10c3 0 5-2 5-5V7c0-3-2-5-5-5z"/></svg></a>
 
-<a class="wa" href="#">
-<svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 00-8.7 15l-1.3 5 5-1.3A10 10 0 1012 2z"/></svg>
-</a>
+<a class="wa"><svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 00-8.7 15l-1.3 5 5-1.3A10 10 0 1012 2z"/></svg></a>
 
-<a class="tk" href="#">
-<svg viewBox="0 0 24 24"><path d="M9 3v12a3 3 0 11-3-3"/></svg>
-</a>
+<a class="tk"><svg viewBox="0 0 24 24"><path d="M16 3a6 6 0 003 1v4a10 10 0 01-3-1v7a5 5 0 11-5-5"/></svg></a>
 
-<a class="yt" href="#">
-<svg viewBox="0 0 24 24"><path d="M23 7s-.2-1.5-.8-2.1c-.7-.8-1.5-.8-1.9-.9C17.5 3.7 12 3.7 12 3.7h0s-5.5 0-8.3.3c-.4.1-1.2.1-1.9.9C1.2 5.5 1 7 1 7S.8 8.7.8 10.3v1.4C.8 13.3 1 15 1 15s.2 1.5.8 2.1c.7.8 1.6.8 2 .9 1.4.1 6.2.3 6.2.3s5.5 0 8.3-.3c.4-.1 1.2-.1 1.9-.9.6-.6.8-2.1.8-2.1s.2-1.7.2-3.3v-1.4C23.2 8.7 23 7 23 7z"/></svg>
-</a>
+<a class="yt"><svg viewBox="0 0 24 24"><path d="M23 7s-.2-1.5-.8-2.1c-.7-.8-1.5-.8-1.9-.9C17.5 3.7 12 3.7 12 3.7s-5.5 0-8.3.3c-.4.1-1.2.1-1.9.9C1.2 5.5 1 7 1 7S.8 8.7.8 10.3v1.4C.8 13.3 1 15 1 15s.2 1.5.8 2.1c.7.8 1.6.8 2 .9 1.4.1 6.2.3 6.2.3s5.5 0 8.3-.3c.4-.1 1.2-.1 1.9-.9.6-.6.8-2.1.8-2.1s.2-1.7.2-3.3v-1.4C23.2 8.7 23 7 23 7z"/></svg></a>
 
 </div>
 
 <script>
 
-/* DATOS */
 const servicios=[
-{name:"Netflix",precio:4990,cat:"peliculas",img:"https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg",disp:"1 pantalla"},
-{name:"HBO Max",precio:6990,cat:"peliculas",img:"https://upload.wikimedia.org/wikipedia/commons/1/17/HBO_Max_Logo.svg",disp:"4 dispositivos"},
-{name:"Prime Video",precio:4990,cat:"peliculas",img:"https://upload.wikimedia.org/wikipedia/commons/f/f1/Prime_Video.png",disp:"3 dispositivos"},
-{name:"Spotify",precio:3990,cat:"musica",img:"https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg",disp:"1 dispositivo"},
-{name:"YouTube Premium",precio:5990,cat:"musica",img:"https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg",disp:"1 dispositivo"},
-{name:"ESPN+",precio:7990,cat:"deportes",img:"https://upload.wikimedia.org/wikipedia/commons/2/2f/ESPN_wordmark.svg",disp:"2 dispositivos"}
+{name:"Netflix",precio:4990,cat:"peliculas",img:"https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg"},
+{name:"Spotify",precio:3990,cat:"musica",img:"https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg"},
+{name:"Disney+",precio:6990,cat:"peliculas",img:"https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg"},
+{name:"ESPN+",precio:7990,cat:"deportes",img:"https://upload.wikimedia.org/wikipedia/commons/2/2f/ESPN_wordmark.svg"}
 ]
 
-let total=0
-let count=0
+let total=0,count=0
 
 function render(lista){
 grid.innerHTML=""
@@ -277,51 +243,53 @@ grid.innerHTML+=`
 <img src="${s.img}">
 <h3>${s.name}</h3>
 <div class="precio">$${s.precio}</div>
-<div class="info">30 días</div>
-<div class="info">${s.disp}</div>
 <button onclick="add('${s.name}',${s.precio})">Agregar</button>
 </div>`
 })
 }
-
 render(servicios)
 
-/* FILTRO */
 function filtrar(cat){
-if(cat==="all") return render(servicios)
-render(servicios.filter(s=>s.cat===cat))
+if(cat==="all")render(servicios)
+else render(servicios.filter(x=>x.cat===cat))
 }
 
-/* CARRITO */
 function add(n,p){
 total+=p
 count++
-document.getElementById("count").innerText=count
-items.innerHTML+=`<div>${n} — $${p}</div>`
-document.getElementById("total").innerText=total
+countEl.innerText=count
+items.innerHTML+=`<div>${n} $${p}</div>`
+totalEl.innerText=total
 }
 
 function toggleCart(){
-cartBox.style.display=
-cartBox.style.display==="block"?"none":"block"
+panelCart.style.display=
+panelCart.style.display==="block"?"none":"block"
 }
 
-function comprar(){
-if(count==0)return alert("Carrito vacío")
-alert("Compra realizada ✔")
-items.innerHTML=""
-total=0
-count=0
-document.getElementById("count").innerText=0
-document.getElementById("total").innerText=0
+const countEl=document.getElementById("count")
+const totalEl=document.getElementById("total")
+
+/* REVIEWS LOCAL */
+function guardarReview(){
+const r={
+n:nombre.value,
+s:stars.value,
+c:coment.value
+}
+let data=JSON.parse(localStorage.getItem("reviews")||"[]")
+data.push(r)
+localStorage.setItem("reviews",JSON.stringify(data))
+mostrar()
 }
 
-/* MODO */
-function toggleMode(){
-document.body.classList.toggle("light")
+function mostrar(){
+let data=JSON.parse(localStorage.getItem("reviews")||"[]")
+reviews.innerHTML=data.map(x=>`
+<div class="review">⭐${x.s} — ${x.n}<br>${x.c}</div>`).join("")
 }
+mostrar()
 
 </script>
-
 </body>
 </html>
